refactor validate reportType with annotation